tests/testdata/dynamic_import/permissions_remote_remote.ts.out
error: Uncaught (in promise) TypeError: Requires import access to "example.com:443", run again with the --allow-import flag
    at http://localhost:4545/dynamic_import/static_remote.ts:2:8
await import(
^
    at async file:///[WILDCARD]/dynamic_import/permissions_remote_remote.ts:1:1
